Algunos bugs resueltos en cuanto al responsive de la pagina contacto.html y el footer de las paginas

--- a/Maqueta del home/seccion_videos.html
+++ b/Maqueta del home/seccion_videos.html
@@ -94,7 +94,7 @@
 						<i class="fa fa-circle fa-fw circulo" aria-hidden="true"></i>
 					</li>
 					<li>
-						<a href="#contacto" class="hvr-underline-from-center contacto">
+						<a href="contacto.html" class="hvr-underline-from-center contacto">
 							Contacto
 						</a>
 					</li>
@@ -135,7 +135,7 @@
 			<div class="col-sm-8 col-md-8">
 				<div class="videos-principal-img">
 					<p>
-						<a class="btn myBtn rojo" href="#" role="button">Videos</a>
+						<a class="btn myBtn rojo" href="seccion_videos.html" role="button">Videos</a>
 					</p>
 					<img src="http://placehold.it/600x600" class="img-responsive" alt="Rutinas" />
 					
@@ -342,11 +342,11 @@
 		<nav class="navbar">
 			<div class="mynavbar-f">
 				<ul class="nav navbar-nav">
-					<li><a href="#" title="Rutinas">Rutinas</a></li>
+					<li><a href="seccion_rutinas.html" title="Rutinas">Rutinas</a></li>
 					<li>
 						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Sección de Videos">Sección de Videos</a></li>
+					<li><a href="seccion_videos.html" title="Sección de Videos">Sección de Videos</a></li>
 					<li>
 						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
 					</li>
@@ -354,7 +354,7 @@
 					<li>
 						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Contacto">Contacto</a></li>
+					<li><a href="contacto.html" title="Contacto">Contacto</a></li>
 				</ul>
 			</div>
 		</nav>
