--- a/Maqueta del home/contacto.html
+++ b/Maqueta del home/contacto.html
@@ -94,7 +94,7 @@
 						<i class="fa fa-circle fa-fw circulo" aria-hidden="true"></i>
 					</li>
 					<li>
-						<a href="#contacto" class="hvr-underline-from-center contacto">
+						<a href="contacto.html" class="hvr-underline-from-center contacto">
 							Contacto
 						</a>
 					</li>
@@ -134,12 +134,12 @@
 		<div class="row container-contacto">
 
 			<!-- Un espacio en blanco a la izquierda del formulario -->
-			<div class="col-md-1"></div>
+			<div class="col-xs-1 col-sm-2 col-md-1"></div>
 			<!-- /FIN Un espacio en blanco a la izquierda del formulario -->
 
 
 			<!-- Formulario de Contacto -->
-			<div class="col-md-8">
+			<div class="col-xs-10 col-sm-8 col-md-8">
 				<!-- class container-form -->
 				<div class="container-form">
 					<div class="title-contact">
@@ -149,14 +149,14 @@
 					<!-- class row -->
 					<div class="row">
 						<!-- Nombre -->
-						<div class="form-group col-md-6">
+						<div class="form-group col-sm-6 col-md-6">
 							<label for="nombre">Nombre*</label>
 							<input type="text" class="form-control" id="nombre" placeholder="Nombre">
 						</div>
 						<!-- /FIN Nombre -->
 
 						<!-- Apellido -->
-						<div class="form-group col-md-6">
+						<div class="form-group col-sm-6 col-md-6">
 							<label for="apellido">Apellido*</label>
 							<input type="text" class="form-control" id="apellido" placeholder="Apellido">
 						</div>
@@ -173,15 +173,15 @@
 						<div class="form-group col-md-12">
 							<fieldset>
 								<legend>Teléfono*</legend>
-								<div class="form-group col-md-2 center-group">
+								<div class="form-group col-xs-3 col-sm-3 col-md-2 center-group">
 									<input type="text" class="form-control" id="pais">
 									<label for="pais">País</label>
 								</div>
-								<div class="form-group col-md-2 center-group">
+								<div class="form-group col-xs-3 col-sm-3 col-md-2 center-group">
 									<input type="text" class="form-control" id="###" >
 									<label for="###">(###)</label>
 								</div>
-								<div class="form-group col-md-6">
+								<div class="form-group col-xs-6 col-sm-6 col-md-6">
 									<input type="text" class="form-control" id="###" >
 									<label for="###">(###)</label>
 								</div>
@@ -208,9 +208,12 @@
 			</div>
 			<!-- /FIN Formulario de Contacto -->
 
+			<!-- Un espacio en blanco a la derecha del formulario -->
+			<div class="col-xs-1 col-sm-2 hidden-xs hidden-md hidden-lg"></div>
+			<!-- /FIN Un espacio en blanco a la derecha del formulario -->
 
 			<!-- Barra Lateral con la imagen de zambrano -->
-			<div class="col-md-3 hidden-xs hidden-sm hidden-md blog-sidebar">
+			<div class="col-md-3 hidden-xs hidden-sm blog-sidebar">
 				<div  class="container-zambrano">
 					<div class=" hide-img">
 						<img class="embed-responsive-item " src="http://placehold.it/350x800" alt="Videos" />
@@ -223,7 +226,7 @@
 	<!-- /FIN Artículos V.02 -->
 
 	<!-- Publicidad y Destacado -->
-	<div class="container">
+	<div class="container hide-publicidad">
 		<div class="row">
 			<div class="col-md-8">
 				<div class="myPubli">
@@ -270,19 +273,19 @@
 		<nav class="navbar">
 			<div class="mynavbar-f">
 				<ul class="nav navbar-nav">
-					<li><a href="#" title="Rutinas">Rutinas</a></li>
+					<li class="center-block"><a href="seccion_rutinas.html" title="Rutinas" >Rutinas</a></li>
 					<li>
-						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
+						<i class="fa fa-circle fa-fw hidden-xs" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Sección de Videos">Sección de Videos</a></li>
+					<li class="center-block"><a href="seccion_videos.html" title="Sección de Videos" >Sección de Videos</a></li>
 					<li>
-						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
+						<i class="fa fa-circle fa-fw hidden-xs" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Nutrición y Dietética">Nutrición y Dietética</a></li>
+					<li class="center-block"><a href="#" title="Nutrición y Dietética" >Nutrición y Dietética</a></li>
 					<li>
-						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
+						<i class="fa fa-circle fa-fw hidden-xs" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Contacto">Contacto</a></li>
+					<li class="center-block"><a href="contacto.html" title="Contacto" >Contacto</a></li>
 				</ul>
 			</div>
 		</nav>
