--- a/Maqueta del home/index.html
+++ b/Maqueta del home/index.html
@@ -94,7 +94,7 @@
 						<i class="fa fa-circle fa-fw circulo" aria-hidden="true"></i>
 					</li>
 					<li>
-						<a href="#contacto" class="hvr-underline-from-center contacto">
+						<a href="contacto.html" class="hvr-underline-from-center contacto">
 							Contacto
 						</a>
 					</li>
@@ -188,7 +188,7 @@
 			<div class="col-sm-8 col-md-8">
 				<div class="principal-img hide-img">
 					<p>
-						<a class="btn myBtn naranja" href="#" role="button">Rutinas</a>
+						<a class="btn myBtn naranja" href="seccion_rutinas.html" role="button">Rutinas</a>
 					</p>
 					<img src="http://placehold.it/600x600" class="img-responsive" alt="Rutinas" />
 					
@@ -208,7 +208,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6">
 					<div class="thumbnail hide-img">
 						<p>
-							<a class="btn myBtn azul-verd" href="#" role="button">Salud</a>
+							<a class="btn myBtn azul-verd" href="seccion_salud.html" role="button">Salud</a>
 						</p>
 						<img src="http://placehold.it/350x250" alt="Salud" />
 						<h2>Trotar mejora tu...</h2>
@@ -222,7 +222,7 @@
 			<div class="col-sm-4 blog-sidebar">
 				<div  class=" sidebar-module">
 					<p>
-						<a class="btn myBtn rojo" href="#" role="button">Videos</a>
+						<a class="btn myBtn rojo" href="seccion_videos.html" role="button">Videos</a>
 					</p>
 					<div id="myVideo" class=" hide-img">
 						
@@ -320,11 +320,11 @@
 		<nav class="navbar">
 			<div class="mynavbar-f">
 				<ul class="nav navbar-nav">
-					<li><a href="#" title="Rutinas">Rutinas</a></li>
+					<li><a href="seccion_rutinas.html" title="Rutinas">Rutinas</a></li>
 					<li>
 						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Sección de Videos">Sección de Videos</a></li>
+					<li><a href="seccion_videos.html" title="Sección de Videos">Sección de Videos</a></li>
 					<li>
 						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
 					</li>
@@ -332,7 +332,7 @@
 					<li>
 						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Contacto">Contacto</a></li>
+					<li><a href="contacto.html" title="Contacto">Contacto</a></li>
 				</ul>
 			</div>
 		</nav>
