Agregada la pagina de nutricion

--- a/Maqueta del home/seccion_videos.html
+++ b/Maqueta del home/seccion_videos.html
@@ -86,7 +86,7 @@
 						<i class="fa fa-circle fa-fw circulo" aria-hidden="true"></i>
 					</li>
 					<li>
-						<a href="#nutricion" class="hvr-underline-from-center nutricion">
+						<a href="seccion_nutricion.html" class="hvr-underline-from-center nutricion">
 							Nutrición y Dietética
 						</a>
 					</li>
@@ -342,19 +342,19 @@
 		<nav class="navbar">
 			<div class="mynavbar-f">
 				<ul class="nav navbar-nav">
-					<li><a href="seccion_rutinas.html" title="Rutinas">Rutinas</a></li>
+					<li class="center-block"><a href="seccion_rutinas.html" title="Rutinas" >Rutinas</a></li>
 					<li>
-						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
+						<i class="fa fa-circle fa-fw hidden-xs" aria-hidden="true"></i>
 					</li>
-					<li><a href="seccion_videos.html" title="Sección de Videos">Sección de Videos</a></li>
+					<li class="center-block"><a href="seccion_videos.html" title="Sección de Videos" >Sección de Videos</a></li>
 					<li>
-						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
+						<i class="fa fa-circle fa-fw hidden-xs" aria-hidden="true"></i>
 					</li>
-					<li><a href="#" title="Nutrición y Dietética">Nutrición y Dietética</a></li>
+					<li class="center-block"><a href="seccion_nutricion.html" title="Nutrición y Dietética" >Nutrición y Dietética</a></li>
 					<li>
-						<i class="fa fa-circle fa-fw" aria-hidden="true"></i>
+						<i class="fa fa-circle fa-fw hidden-xs" aria-hidden="true"></i>
 					</li>
-					<li><a href="contacto.html" title="Contacto">Contacto</a></li>
+					<li class="center-block"><a href="contacto.html" title="Contacto" >Contacto</a></li>
 				</ul>
 			</div>
 		</nav>
