Agregada pagina vista-nutricion.html

--- a/Maqueta del home/index.html
+++ b/Maqueta del home/index.html
@@ -273,7 +273,7 @@
 	<!-- /FIN Artículos V.02 -->
 
 	<!-- Publicidad y Destacado -->
-	<div class="container">
+	<div class="container hide-publicidad">
 		<div class="row">
 			<div class="col-md-8">
 				<div class="myPubli">
