--- a/Maqueta del home/seccion_nutricion.html
+++ b/Maqueta del home/seccion_nutricion.html
@@ -5,25 +5,19 @@
 	<title>Jhonny Zambrano - Piernas de Acero</title>
 	<meta name="description" content="Pagina de inicio de Jhonny Zambrano (Piernas de Acero)">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<!-- Bootstrap -->
 	<script src="https://use.fontawesome.com/5df8d2dafb.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="css/estilos.css" rel="stylesheet">
 	<link href="css/rutinas-style.css" rel="stylesheet" >
-
 	<link href="https://fonts.googleapis.com/css?family=Asap:400,700" rel="stylesheet">
-
-
 	<!--<link href="css/hover.css" rel="stylesheet" media="all">-->
-
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-
 </head>
 <body>
 	<!-- Header -->
@@ -40,7 +34,6 @@
 			
 	</header>
 	<!-- /FIN header -->
-
 	<!-- Barra de navegación-->
 	<nav class="navbar navbar-default">
 		<div class="container">
@@ -103,7 +96,6 @@
 		</div>
 	</nav>
 	<!-- /FIN Barra de navegación-->
-
 	<!-- Botones de las redes sociales y campo de búsqueda-->
 	<div class="caja-redes">
 		<a href="#" class="icon-button facebook ">
@@ -115,7 +107,6 @@
 		<a href="#" class="icon-button twitter">
 			<i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
 		</a>
-
 		<form class="navbar-form pull-right" role="search">
 			<div class="form-group">
 				<input type="text" class="form-control" placeholder="Buscar">
@@ -126,9 +117,7 @@
 		</form>
 	</div>
 	<!-- /FIN Botones de las redes sociales y campo de búsqueda-->
-
 	
-
 	<!-- Artículos -->
 	<div class="container myArticles">
 		<div class="row">
@@ -140,7 +129,6 @@
 					<img src="http://placehold.it/600x600" class="img-responsive" alt="Nutrición" />
 					
 				</div>
-
 				<div class="col-xs-12 col-sm-12 col-md-6">
 					<div class="thumbnail hide-img">
 						<img src="http://placehold.it/350x250" alt="Nutrición" />
@@ -148,7 +136,6 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita, voluptatum explicabo neque architecto minima dolor quisquam. Totam excepturi officiis debitis repellendus facere eos, nam, fuga dolorum enim aperiam. Repellat!</p>
 					</div>
 				</div>
-
 				<div class="col-xs-12 col-sm-12 col-md-6">
 					<div class="thumbnail hide-img">
 						<img src="http://placehold.it/350x250" alt="Salud" />
@@ -157,7 +144,6 @@
 					</div>
 				</div>
 			</div>
-
 			
 			<!-- Barra Lateral de videos, publicidad y boletín para suscripción -->
 			<div class="col-sm-4 blog-sidebar">
@@ -209,23 +195,19 @@
 				</div>
 			</div>
 			<!-- /FIN Barra Lateral de videos, publicidad y boletín para suscripción -->
-
 			
-
 			
 		</div>
 	</div>
 	<!-- /FIN Artículos -->
-
 	<!-- Publicidad y Destacado -->
-	<div class="container">
+	<div class="container hide-publicidad">
 		<div class="row">
 			<div class="col-md-8">
 				<div class="myPubli">
 					<h2>Publicidad</h2>
 				</div>
 			</div>
-
 			<div class="col-md-4">
 				<div class="myDestacado">
 					<div class="btn myBtn">
@@ -247,10 +229,7 @@
 		</div>
 	</div>
 	<!-- /FIN Publicidad y Destacado -->
-
-
 	
-
 	<footer class="text-center">
 		<div class="redes-sociales">
 			<a href="#" class="icon-button redes-margin facebook ">
@@ -285,7 +264,6 @@
 		<p> © Derechos Reservados 2016 Jhonny D. Zambrano - Made by <a href="http://www.ismcenter.com" title="Visita nuestra página web">ISMCENTER</a></p>
 		
 	</footer>
-
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
