--- a/Maqueta del home/seccion_salud.html
+++ b/Maqueta del home/seccion_salud.html
@@ -218,7 +218,7 @@
 	<!-- /FIN Artículos -->
 
 	<!-- Publicidad y Destacado -->
-	<div class="container">
+	<div class="container hide-publicidad">
 		<div class="row">
 			<div class="col-md-8">
 				<div class="myPubli">
