Agregada la pagina vista_rutinas.html

--- a/Maqueta del home/seccion_rutinas.html
+++ b/Maqueta del home/seccion_rutinas.html
@@ -144,7 +144,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6">
 					<div class="thumbnail hide-img">
 						<img src="http://placehold.it/350x250" alt="Nutrición" />
-						<h2>Una rutina importante...</h2>
+						<h2><a href="vista_rutinas.html">Una rutina importante...</a></h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita, voluptatum explicabo neque architecto minima dolor quisquam. Totam excepturi officiis debitis repellendus facere eos, nam, fuga dolorum enim aperiam. Repellat!</p>
 					</div>
 				</div>
@@ -152,7 +152,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6">
 					<div class="thumbnail hide-img">
 						<img src="http://placehold.it/350x250" alt="Salud" />
-						<h2>Rutina de brazos...</h2>
+						<h2><a href="vista_rutinas.html">Rutina de brazos...</a></h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita, voluptatum explicabo neque architecto minima dolor quisquam. Totam excepturi officiis debitis repellendus facere eos, nam, fuga dolorum enim aperiam. Repellat!</p>
 					</div>
 				</div>
