--- a/Maqueta del home/vista_nutricion.html
+++ b/Maqueta del home/vista_nutricion.html
@@ -162,7 +162,7 @@
 					<div >
 						<div class="img-thumbnail hide-img">
 							<p>
-								<a class="btn myBtn azul-verd" href="#" role="button">Salud</a>
+								<a class="btn myBtn azul-verd" href="seccion_salud.html" role="button">Salud</a>
 							</p>
 							<img src="http://placehold.it/350x250" alt="Videos" />
 							
