Arreglo del responsive del slider

--- a/Maqueta del home/index.html
+++ b/Maqueta del home/index.html
@@ -139,8 +139,7 @@
 
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
-			<div class="item active">
-				<img src="http://placehold.it/1200x315" alt="Primera Imagen" class="img-responsive">
+			<div id="item1" class="item active">
 				<div class="carousel-caption">
 					<div class="mytitle">
 						<h3>Entrenamiento</h3>
@@ -152,8 +151,7 @@
 				</div>
 			</div>
 
-			<div class="item">
-				<img src="http://placehold.it/1200x315" alt="Primera Imagen" class="img-responsive">
+			<div id="item2" class="item">
 				<div class="carousel-caption">
 					<div class="mytitle">
 						<h3>Guía de nutrición</h3>
@@ -165,8 +163,7 @@
 				</div>
 			</div>
 
-			<div class="item">
-				<img src="http://placehold.it/1200x315" alt="Primera Imagen" class="img-responsive">
+			<div id="item3" class="item">
 				<div class="carousel-caption">
 					<div class="mytitle">
 						<h3>Tips</h3>
